comment on configuration properties

--- a/lc-client-consumer/src/main/resources/application.properties
+++ b/lc-client-consumer/src/main/resources/application.properties
@@ -1,5 +1,24 @@
 spring.application.name=eureka-client-request
 server.port=8759
+
+# 缓存刷新的线程池
+#eureka.client.cache-refresh-executor-thread-pool-size=
+
+# 心跳线程池
+#eureka.client.heartbeat-executor-thread-pool-size=2
+
+# 缓存刷新的调度频率
+#eureka.client.registry-fetch-interval-seconds=
+
+# client向server发送心跳的时间间隔
+#eureka.instance.lease-renewal-interval-in-seconds=10
+
+# InstanceInfoReplicator 将实例信息同步到Eureka server的初始延迟时间
+#eureka.client.initial-instance-info-replication-interval-seconds=100
+
+# InstanceInfoReplicator 多久将实例信息同步到Eureka server一次
+eureka.client.instance-info-replication-interval-seconds=100
+
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}
 
@@ -16,9 +35,4 @@ logging.level.com.netflix=debug
 
 eureka.client.on-demand-update-status-change=false
 
-#eureka.client.heartbeat-executor-thread-pool-size=2
-
-#eureka.client.initial-instance-info-replication-interval-seconds=100
-
-eureka.instance.lease-renewal-interval-in-seconds=10
 
