--- a/lc-server/src/main/resources/application.properties
+++ b/lc-server/src/main/resources/application.properties
@@ -10,4 +10,23 @@ eureka.client.service-url.defalut-zone=http://localhost:${server.port}/eureka/
 
 #logging.level.org.springframework=debug
 
-eureka.server.eviction-interval-timer-in-ms=10000
+# 是否开启自我保护模式
+#eureka.server.enable-self-preservation=
+
+# int (实际收到的续约次数 * threshold) < 需要收到多少次续约
+#eureka.server.renewal-percent-threshold=
+
+# 需要收到多少次续约
+#eureka.instance.registry.expected-number-of-renews-per-min=
+
+# 剔除过期实例
+eureka.server.eviction-interval-timer-in-ms=5000
+
+# 是否使用只读的 response-cache
+#eureka.server.use-read-only-response-cache=
+
+# 数据多久从readwritecachemap更新到readOnlyCacheMap
+#eureka.server.response-cache-update-interval-ms=
+
+# readwritecachemap中的数据写入后多长时间过期一次
+#eureka.server.response-cache-auto-expiration-in-seconds=
